# saywhat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/autocorrect/: Cargo.toml  README.md
examples/autocorrect/src/: main.rs  text_box.rs  words.rs
py-saywhat/: Cargo.toml  pyproject.toml
py-saywhat/src/: lib.rs
py-saywhat/tests/: test_distance.py
src/: lib.rs
